--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
+<!doctype html>	
 <html>
     <head>
-        <script src="file:///C:/Users/Jose Mansilla/Documents/Universidad/Segundo ciclo 2017/Estructuras de datos/Laboratorio ejemplo/scripts/index.js"></script> 
+        <meta charset="UTF-8">
+        <script src="file:///C:/Users/Jose Mansilla/Documents/Laboratorio3_JavaScript/scripts/index.js"></script> 
     </head>
     <body>
-        <!--comment
-        <form method="post" action="index.html">
-            <input type="text" name="id" value="" placeholder="ingrese un id"/>
-            <input type="text" name="nombre" value="" placeholder="ingrese un nombre"/>
-            <input type="text" name="id" value="" placeholder="ingrese un valor"/>
-            <input type="submit" value="Enviar"/>
-        </form>-->
+        <h1>Laboratorio #3</h1>
         <input type="text" name="id" id="id" value="" placeholder="ingrese un id"/>
         <input type="text" name="nombre" id="nombre" value="" placeholder="ingrese un nombre"/>
         <input type="text" name="id" value="" id="bool" placeholder="ingrese un booleano"/>
         <input type="submit" value="Save" onclick="getData('id', 'nombre', 'bool')"/>
-        <input type="submit" value="Show Data" onclick="printData()"/>
+        <input type="submit" value="Show JSon" onclick="printDataJSon()"/>
+        <input type="submit" value="Show XML" onclick="printDataXML()"/>
+        <input type="submit" value="Clean Data" onclick="deleteData()"/>
         <h1>Usuarios</h1>
         <div id="users">
 
